# agentry-shell

./: .env.example  .gitignore  CONTEXT.md  NOTES.md  Orchestrator优化.md  README-zh.md  README.md  case-facts.md  cli.py  main.py  pyproject.toml  wiki-agent开发.md  wiki_agent优化.md
agents/: chat_agent.py  coordinator_agent.py  echo_agent.py  orchestrator_agent.py  research_agent.py  research_tools.py  wiki_agent.py  wiki_schema.py
backend/: __init__.py
backend/server/: __init__.py  app.py  websocket_manager.py
core/: __init__.py  agent_interface.py  config.py  dispatch.py  intent.py  registry.py  runner.py  scope.py  session.py  staging.py  stream.py  tools.py  trace.py  wiki_index.py
core/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
core/retrievers/: __init__.py  arxiv.py  base.py  local_file.py  tavily.py
docs/: CONTEXT.md  Orchestrator优化.md  case-facts.md  evaluator.md  plan.md  todo.md  wiki_agent优化.md
docs/archive/: phase1-phase2-history.md
docs/changes/: iter-01-changes.md
docs/plans/: iter-01-plan.md
docs/reviews/: iter-01-eval.md  iter-02-eval.md
fixtures/: llm-agents.md
frontend/: index.html  scripts.js
scripts/: demo.sh  replay.py
tests/: check_agents.py  check_coordinator.py  check_dispatch.py  check_intent.py  check_orchestrator.py  check_research_spoke.py  check_session.py  check_staging.py  check_tool_calling.py  check_tools.py  check_trace.py  check_wiki_agent.py  check_wiki_index.py  reset_wiki.sh  ws_multiturn.py
tests/fixtures/: ingest_single_topic.md
tests/fixtures/wiki_baseline/: index.md
(+2 files in other folders)
