[project]
name = "agentry-shell"
version = "0.1.0"
description = "A from-scratch, extensible LLM agent runtime: agent lifecycle, intent-driven orchestration, and a ReAct tool loop."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "tiktoken>=0.7.0",
    "arxiv>=2.1.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
